--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,12 @@
-<nav>
+<div class="topnav">
     {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>{{ item.name }}</a>
+    <a href="{{ item.link }}" 
+        {% if 
+            (page.url == item.link) 
+            or (page.url == "/" and item.link == "/index.html") %}
+                class="active"
+        {% endif %}>
+        {{ item.name }}
+    </a>
     {% endfor %}
-</nav>
+</div>
