--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,50 @@
+body{
+    background-color: #151515;
+    color: white;
+}
 .current {
     color: green;
 }
+
+p {
+    margin: 10px 0px 0px 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    height: 500%;
+    font-size: larger;
+}
+
+a{
+    color: blue;
+}
+
+div.highlight {
+    margin: 10px 0px 0px 50px;
+}
+
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
