--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     {% include navigation.html %}
+    <div>
     {{ content }}
+    </div>
+    {% include footer.html %}
   </body>
 </html>
