--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -14,7 +14,7 @@ p {
 }
 
 a{
-    color: blue;
+    color: blueweb;
 }
 
 div.highlight {
@@ -48,3 +48,10 @@ div.highlight {
     background-color: #4CAF50;
     color: white;
   }
+
+  .footer {
+  width: 100%;
+  color: #4CAF50;
+  text-align: center;
+  font-size: large;
+}
