Datenschutz and stuff

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<div class="topnav">
+<div id="navbar" class="topnav">
     {% for item in site.data.navigation %}
     <a href="{{ item.link }}" 
         {% if (page.url == item.link) %}
