--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <script src="/assets/js/myscript.js"></script>
   </head>
   <body>
     {% include navigation.html %}
-    <div>
+    <div id="content" class="content">
     {{ content }}
     </div>
     {% include footer.html %}
