list style squares

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -55,6 +55,11 @@ div{
 
 }
 
+ul
+{
+    list-style-type: square;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
     position: fixed;
