--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,8 @@
-<div id="navbar" class="topnav">
+<div id="topnav">
     {% for item in site.data.navigation %}
-    <a href="{{ item.link }}" 
-        {% if (page.url == item.link) %}
-            class="active"
-        {% endif %}>
-        {{ item.name }}
-    </a>
+        <a href="{{ item.link }}" {% if (page.url == item.link) %}
+                                    class="active"
+                                {% endif %}>
+            {{ item.name }}</a>
     {% endfor %}
 </div>
