--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,4 +5,5 @@
                                 {% endif %}>
             {{ item.name }}</a>
     {% endfor %}
+    <img style="height:36px; margin-top: 9px; margin-left:40px" src="/assets/img/burger.svg" />
 </div>
